# uvic-rover

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: catkin.yml  main.yml
include/runt_rover/: Speed.h
launch/: 99-libphidget22.rules  README.md  arduino.launch  arm.launch  aruco.launch  auto_jetson.launch  cam.launch  camagain.launch  cheese.launch  display.launch  drive.launch  drivetrain_test.launch  frontworm.launch  gripper.launch  imu.launch  jetson.launch  joystick.launch  robot_xacro.launch  runt_rover.launch  v2Joystick.launch  zed2i.rviz
launch/old/: arm_test.launch  display.launch  phidget.launch  v2Joystick.launch
launchFolder/: run_rover.launch  run_runt_rover.launch
msg/: Arm.msg  Coordinates.msg  Speed.msg
nodes/: comms  joystick_demo  nav  video
rover_description/: UVicArm.gazebo  UVicArm.urdf  UVicArm.xacro
rover_description/Arm/: BaseComponent.STL  ElbowLink2.STL  Shoulder.STL  Wrist.STL  urdf.rviz
scripts/: CMakeLists.txt  arm_control.py  aruco_ros.py  aruco_ros_auto.py  auto_rover.py  detect_aruco_image.py  file.py  gps_navigation.py  gps_tpv_mode_enum.py  joystick_demo.py
scripts/ROS_runt_demo/: ROS_runt_demo.ino
scripts/nav/: nav_main.py
src/: gps.py  list-camera.sh
src/Battery_voltage_measuring/: pdu_voltage_reader_code.ino
src/IMU/IMU_ROS/: IMU_ROS.ino
src/IMU/LSM9DS1_Basic_I2C/: LSM9DS1_Basic_I2C.ino
src/ROS-rover/: .gitignore  CMakeLists.txt  package.xml
src/ROS-rover/.github/workflows/: main.yml
src/ROS-rover/src/rover/drivetrain_controller/: drivetrain_controller.ino
src/arm/: CMakeLists.txt  README.md  can.ino  control_arm.py  gripper.py  mom.py  package.xml
src/arm/IK/: IK.ino
src/arm/joystick_arduino/: joystick_arduino.ino
src/arm/joystick_arduino/arm_joystick_working.ino/: arm_joystick_working.ino.ino
src/arm/joystick_arduino/base.ino/: base.ino.ino
src/arm/launch/: arm.launch
src/arm/sam/: Sam.py  sam_linux.py
src/arm/src/: joystick_arduino.ino
src/arm/src/joystick_arduino/: joystick_arduino.ino
src/arm/src/joystick_arduino/arm_joystick_working.ino/: arm_joystick_working.ino.ino
src/arm/src/joystick_arduino/arm_joystick_working_CANtest.ino/: arm_joystick_working_CANtest.ino.ino
src/arm/src/joystick_arduino/base.ino/: base.ino.ino
src/arm/src/safetyMove/: safetyMove.ino
src/cam/: README.md  cam0.yml  cam1.yml  cam2.yml  gtk.py  gui.py
src/drivetrain/: CMakeLists.txt  control_speed.py  package.xml  setup.py
src/drivetrain/drivetrain_controller/: drivetrain_controller.ino
src/drivetrain/encoders/: TestMotors.ino
src/drivetrain/include/: Speed.h
src/drivetrain/msg/: Speed.msg
src/drivetrain/simpledrive/: simpledrive.ino
src/drivetrain/src/: control_speed.py  joystick_demo  joystick_demo.py
src/drivetrain/src/drivetrain_controller/: drivetrain_controller.ino
src/drivetrain/src/gptdrive/: gptdrive.ino
src/drivetrain/src/roverdrive/: roverdrive.ino
src/drivetrain/src/simpledrive/: simpledrive.ino
src/encoder-read/: encoder-test.ino
src/launch/: arduino.launch  joystick.launch  v2Joystick.launch
src/learning_joy/: package.xml
src/nav/: CMakeLists.txt  README.md  gps.py  gps_launch.launch  imu.py  package.xml
src/nav/mapproxy-docker/: Dockerfile  README.md  start.sh
src/nav/src/: gps.py  main.py
src/phidget_drivetrain/: README.md  drive.py  front_left_right_nopid.py  front_left_right_worm.ino  front_left_right_worm.py  phidget.py  phidget_simple_drive.py  phidget_tesst_keyboard.py  ros_phidget_joy.py  ros_worm_joy.py  rosserial_worm.ino  scratch_wormjoy.py  testtimephidget.py  worm.ino
src/phidget_drivetrain/front_left_right_worm/: front_left_right_worm.ino
src/phidget_drivetrain/rosserial_worm_v2/: rosserial_worm_v2.ino
src/phidget_drivetrain/worm/: worm.ino
src/phidget_drivetrain/wormgearpid/: encoder.ino  worm_pid.ino
src/rover/comms/: README.md  commands.py  connection_client.py  connection_server.py  exceptions.py  health.py  main.py  ros.py  state.py  wifi.py
src/rover/joystick_demo/: joystick_demo.py
src/rover/nav/: main.py  report_handlers.py
src/rover/utils/: shell.py
src/rover/video/: main.py
src/runt_rover/ROS_runt_demo/: ROS_runt_demo.ino
src/runt_rover/comms/: command_publisher.py  commands.py  connection_client.py  connection_manager.py  connection_server.py  health.py  main.py  network_connector.py  network_manager.py  ros.py  state.py  wifi.py
src/runt_rover/comms/connection_server/: __init__.py
src/runt_rover/comms/test/: commands.py
src/runt_rover/drivetrain_controller/: drivetrain_controller.ino
src/runt_rover/joystick_demo/: joystick_demo.py
src/runt_rover/nav/: main.py  report_handlers.py
src/runt_rover/utils/: systemd.py  usb.py
src/runt_rover/video/: camera.py  main.py
src/usb_cam/config/: usb_cam1.yml  usb_cam2.yml
src/usb_cam/launch/: usb_cam.launch
startup/: ros-rover.service  ros-startup.sh
test/rover/comms/: ros.py
test/runt_rover/comms/: ros.py
